# learnFineTuningCodeBase

./: .env.example  .gitignore  README.md  finetune.ipynb  main.py  prepare_dataset.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: finetune-checkpoint.ipynb
codebase/: index.css  index.html  script.js
codebase/blog/: dataset-preparation.html  gemma-3-fine-tuning.html  qlora-explained.html
