[project]
name = "learnfinetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "lock>=2018.3.25.2110",
    "mlx>=0.30.6",
    "python-dotenv>=1.2.1",
    "tensorboard>=2.20.0",
    "trl>=0.28.0",
    "unsloth-mlx>=0.3.5",
    "uvicorn>=0.41.0",
]
